[gd_scene load_steps=8 format=3 uid="uid://bchfxguqqtrom"]

[ext_resource type="PackedScene" uid="uid://b1hfuapudwucs" path="res://App/Scenes/GUI/button_hover_text_popout.tscn" id="1_whve4"]
[ext_resource type="Theme" uid="uid://c0vvtqxyanoyo" path="res://App/Themes/info_popup_panel_theme.tres" id="2_wshkh"]
[ext_resource type="Theme" uid="uid://biy6q7375incn" path="res://App/Themes/in_game_ui_theme.tres" id="3_m5uhq"]
[ext_resource type="Theme" uid="uid://6h5f7sqktd67" path="res://App/Themes/animatic_theme.tres" id="4_5td8m"]
[ext_resource type="Texture2D" uid="uid://c4g4n4sfyjr5a" path="res://Assets/Images/placeholder/cloud_1.png" id="4_63v6k"]
[ext_resource type="Script" path="res://App/Scenes/GUI/UserInstructionsPopup.gd" id="6_k0abt"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_povqq"]
content_margin_top = 32.0
texture = ExtResource("4_63v6k")
expand_margin_left = 64.0
expand_margin_top = 128.0
expand_margin_right = 64.0
expand_margin_bottom = 34.0

[node name="UI" type="CanvasLayer"]

[node name="ButtonHoverTextPopup" parent="." instance=ExtResource("1_whve4")]
unique_name_in_owner = true
offset_left = -512.0
offset_top = 0.0
offset_right = 512.0
offset_bottom = 128.0
theme = ExtResource("2_wshkh")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -616.0
offset_top = -178.0
offset_right = 619.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme = ExtResource("3_m5uhq")

[node name="UnitButtons" type="BoxContainer" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="UserInstructions" type="MarginContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -626.0
offset_top = -220.0
offset_right = 627.0
offset_bottom = 67.0
grow_horizontal = 2
theme_override_constants/margin_left = 76
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 76
theme_override_constants/margin_bottom = 32
script = ExtResource("6_k0abt")

[node name="TexturePanel" type="PanelContainer" parent="UserInstructions"]
layout_mode = 2
theme = ExtResource("4_5td8m")
theme_override_styles/panel = SubResource("StyleBoxTexture_povqq")

[node name="Label" type="Label" parent="UserInstructions/TexturePanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Place 3 units in the deployment zone to start."
horizontal_alignment = 1

[node name="AutoCloseTimer" type="Timer" parent="UserInstructions"]
wait_time = 5.0
one_shot = true

[connection signal="gui_input" from="UserInstructions" to="UserInstructions" method="_on_gui_input"]
[connection signal="mouse_entered" from="UserInstructions" to="UserInstructions" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="UserInstructions" to="UserInstructions" method="_on_mouse_exited"]
[connection signal="timeout" from="UserInstructions/AutoCloseTimer" to="UserInstructions" method="_on_auto_close_timer_timeout"]
